scripts/base/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s_django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s_django
  template:
    metadata:
      labels:
        app: k8s_django
    spec:
      containers:
        - name: k8s_django
          image: qnix95/k8s_django:0.1
#          ports:
#            - containerPort: 8000
#          env:
#            - name: DJANGO_SETTINGS_MODULE
#              value: k8s_django.settings.production
